--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.1.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "@tailwindcss/postcss": "^4.0.0",
@@ -21,8 +21,8 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
     "tailwindcss": "^4.0.0",
     "typescript": "~5.7.2",
     "eslint": "^9.0.0",
