--- a/package.json
+++ b/package.json
@@ -4,28 +4,36 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "tsx server.ts",
     "build": "next build",
-    "start": "next start -p 3000",
+    "start": "tsx server.ts",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@types/express": "^5.0.6",
+    "autoprefixer": "^10.4.21",
+    "express": "^4.21.2",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
-    "@tailwindcss/postcss": "^4.0.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.4.47"
+    "nanoid": "^5.1.6",
+    "next": "latest",
+    "postcss": "^8.4.47",
+    "qrcode.react": "^4.2.0",
+    "react": "latest",
+    "react-device-detect": "^2.2.3",
+    "react-dom": "latest",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
-    "tailwindcss": "^4.0.0",
-    "typescript": "~5.7.2",
     "eslint": "^9.0.0",
-    "eslint-config-next": "15.1.0"
+    "eslint-config-next": "15.1.0",
+    "tailwindcss": "^4.0.0",
+    "tsx": "^4.21.0",
+    "typescript": "~5.7.2"
   }
 }
