feat: Configure build and start for production deployment
Updates package.json scripts to properly build and start the Next.js application for production. This includes adding a TypeScript compilation step for the server and changing the start command to use the compiled JavaScript output.

Also adds a health check endpoint for easier integration with deployment platforms.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx server.ts",
-    "build": "next build",
-    "start": "tsx server.ts",
+    "build": "next build && tsc --project tsconfig.server.json",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
